# mkv-slimmer

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  SonarrImportScript.md  settings.yaml
.claude/: settings.local.json
docs/: code-review-findings.md  deduplication-plan.md
examples/: .env  test.txt  test_video.mkv
src/: analyzer.rs  batch.rs  cli.rs  config.rs  error.rs  main.rs  models.rs  output.rs  utils.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: mod.rs  preferences.rs  settings.rs
src/core/: analyzer.rs  batch.rs  mod.rs  processor.rs
src/display/: formatter.rs  mod.rs  tables.rs
src/models/: ffprobe.rs  mod.rs  sonarr.rs  stream.rs  task.rs
src/utils/: dependencies.rs  format.rs  mod.rs  sonarr.rs  validation.rs
