[package]
name = "mkv-slimmer"
version = "0.1.0"
edition = "2021"
description = "Tool to analyze and remove unnecessary streams from MKV files"
authors = ["Peter Farkas <peter.farkas@aliz.ai>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
matroska = "0.16"
tabled = "0.15"
colored = "2.0"
dialoguer = "0.11"
which = "4.4"
atty = "0.2"
