[package]
name = "mkv-slimmer"
version = "0.1.0"
edition = "2024"
description = "Tool to analyze and remove unnecessary streams from MKV files"
authors = ["Peter Farkas"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
matroska = "0.30.0"
tabled = "0.20.0"
colored = "3.0.0"
dialoguer = "0.11"
which = "8.0.0"
atty = "0.2"
glob = "0.3"
